--- a/local.env.dist
+++ b/local.env.dist
@@ -1,3 +1,3 @@
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=
+AWS_ACCESS_KEY_ID=AKIAIE7BON6VOGWNE7QA
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=us-east-1a
